--- a/public/main.css
+++ b/public/main.css
@@ -11,7 +11,7 @@
     margin: 0 auto;
     height: 100vh;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 50px auto auto 50px;
+    grid-template-rows: 50px calc(50% - 50px) calc(50% - 50px) 50px;
 }
 
 .menu{
