--- a/public/kalkulator/kalkulator.css
+++ b/public/kalkulator/kalkulator.css
@@ -11,7 +11,9 @@ body{
     height: 100vh;
     justify-content: center;
     align-items: center;
-    background-color: whitesmoke;
+    background: url('../images/art-art-materials-clips-159627_720.jpg') no-repeat center;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 .kalkulator{
@@ -46,6 +48,9 @@ body{
     position: fixed;
     bottom: 5px;
     right: 5px;
+    background-color: #ffffffb3;
+    border-radius: 5px;
+    padding: 5px;
 }
 
 .clear{
