--- a/public/peta/peta.css
+++ b/public/peta/peta.css
@@ -6,18 +6,24 @@
     margin: 0;
 }
 
+body{
+    background: url('../images/appetizer-bowl-bread-539451_720.jpg') no-repeat center;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
 .konten{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 50%);
+    grid-template-columns: repeat(2, 1fr);    
+    grid-template-rows: calc(50% - 30px) 50% 30px;
     width: 100vw;
     height: 100vh;
 }
 
 .peta{
     grid-column: 1/3;
-    border-bottom: 1px solid #dedede;
-    box-shadow: 0px 1px #DEDEDE;
+    border: 1px solid #dedede;
+    box-shadow: #0006 0px 0px 10px;
 }
 
 .tempat-gambar{
@@ -25,23 +31,43 @@
     align-items: center;
     display: grid;
     padding: 20px;
+    position: relative;
+    border: 1px solid #dedede;
+    margin: 25px;
+    background-color: white;
+    box-shadow: #0006 0px 0px 10px;
+    margin-right: 12.5px;
 }
 
 .gambar{
     box-shadow: 4px 4px 0px #dedede;
     max-height: 100%;
+    margin-left: 12.5px;
     max-width: 100%;
     margin: auto;
 }
 
 .tempat-review{
     padding: 20px;
-    border-left: 1px solid #dedede;
+    border: 1px solid #dedede;
+    margin: 25px;
+    background-color: white;
+    box-shadow: #0006 0px 0px 10px;
+}
+
+.footer-image{
+    position: absolute;
+    left: 5px;
+    text-shadow: 0 0 5px white;
+    bottom: 0;
 }
 
 .footer{
-    position: absolute;
-    bottom: 5px;
-    left: 5px;
-    text-shadow: 0 0 5px white;
+    grid-column: 1/3;
+    font-size: 0.8em;
+    background-color: #111;
+    color: white;
+    justify-content: center;
+    display: grid;
+    align-items: center;
 }
