--- a/public/peta/peta.css
+++ b/public/peta/peta.css
@@ -12,6 +12,18 @@ body{
     background-size: cover;
 }
 
+#offline{
+    background-color: red;
+    color: white;
+    text-align: center;
+    position: fixed;
+    width: 100%;
+    opacity: 0.3;
+    border-bottom-left-radius: 7px;
+    border-bottom-right-radius: 7px;
+    z-index: 401;
+}
+
 .konten{
     display: grid;
     grid-template-columns: repeat(2, 1fr);    
