--- a/public/main.css
+++ b/public/main.css
@@ -15,7 +15,8 @@ body{
 .container{
     display: grid;
     margin: 0 auto;
-    height: 100vh;    
+    height: 100vh;
+    width: 100%;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 50px calc(50% - 50px) calc(50% - 50px) 50px;
     background-color: #0006;
